PRO-FUND 1/INVOICE ASSIGNMENT 1 (UNFINIHSED).txt
main.cpp: In function ‘int main()’:
main.cpp:41:85: error: invalid operands of types ‘double’ and ‘’ to binary ‘operator<<’
   41 |             cout << "Tax:" << setw(WIDTH) << "$" << tax += tax + (price * TAX_RATE) << endl;
      |                                                            ~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~
main.cpp:47:105: error: invalid operands of types ‘double’ and ‘’ to binary ‘operator<<’
   47 |                 cout << "Total:" << setw(WIDTH) << "$" << total += total + price + tax - discountAmount << endl;
      |                                                                    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~
main.cpp:49:66: error: no match for ‘operator+=’ (operand types are ‘std::basic_ostream::__ostream_type’ {aka ‘std::basic_ostream’} and ‘double’)
   49 |                  cout << "Total:" << setw(WIDTH) << "$" << total += total + price + tax;
      |                  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~







// AFOLAMI KOREDE UMAR
// INVOICE ASSIGNMENT
// SECTION 902
// 2/11/2023
#include <iostream>
#include <cmath>
#include <iomanip>
using namespace std;

int main(){
    // Below are a list of my constants
    const int MIN_CHOICE = 1;
    const int MAX_CHOICE = 3;
    const double DISCOUNT = 0.05;
    const double TAX_RATE = 0.08;
    const int CENT = 2;
    const int WIDTH = 15;
    
    // Output prompt and options to the user
    cout << "What would you like to buy?" << endl;
    cout << "1. Bread" << endl << "2. Milk" << endl << "3. Soap" << endl;
    
    //Allow User to inout choices
    cout << "Please enter your choice: ";
    int choice;
    cin >> choice;
    // Create conditions for validity of choice, and continue user input
    if (choice >= MIN_CHOICE && choice <= MAX_CHOICE) {
        cout << "Please enter the price: $";
        double price;
        cin >> price;
        
        cout << "Please enter your age: ";
        int age;
        cin >> age;
        
        double total = 0;
        double tax = 0;
        //Set precision for cent
        cout << setprecision(CENT) << fixed << left;
        cout << setw(WIDTH) << fixed << "INVOICE" << endl;
        cout << "Price:" << setw(WIDTH) << "$" << price << endl;
        // Create conditions for whether tax is applied or not
        if (choice == 2 || choice == 3) {
            cout << "Tax:" << setw(WIDTH) << "$" << tax += tax + (price * TAX_RATE) << endl;
        } else {
            cout << "Tax:" << setw(WIDTH) << "$" << tax << endl;
        //Create condition for age, and whether discount is applied or not    
        } if (age >= 60) {
                double discountAmount = DISCOUNT * price;
                cout << "Discount:" << setw(WIDTH) << "-$" << discountAmount << endl;
                cout << "Total:" << setw(WIDTH) << "$" << total += total + price + tax - discountAmount << endl;
             } else {
                 cout << "Total:" << setw(WIDTH) << "$" << total += total + price + tax;
             }
        
        
    } else {
        cout << choice << " is invalid, choose from " << MIN_CHOICE << " to " << MAX_CHOICE << endl;
    }

    return 0;
}